Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -106,7 +106,7 @@ See image below as a reference:
 Select OK (just once).
 
 6. Click on the link "**Show optional settings**" in the Cluster configuration form. Then, make sure **Diagnostics** is set to **On**. 
-In "Add on features" select "Include DNS service" and "Include repair manager".
+In "**Add on features**" select "**Include DNS service**" and "**Include repair manager**".
 In **Fabric version**, select **Automatic** upgrade mode so that Microsoft automatically updates the version of the fabric code running the cluster. Set the mode to Manual if you want to [choose a supported version](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-cluster-upgrade) to upgrade to.
 
 You do not need to enter any "[fabric setting properties](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-cluster-fabric-settings)", though.
@@ -115,6 +115,18 @@ See image below for reference:
 ![image](https://user-images.githubusercontent.com/1712635/30460282-bdab5d88-996a-11e7-8e9c-553c62b1cf4c.png)
 
 Select **OK**.
+
+At the **Security** form, for this initial walkthrough select **Unsecure**. It is highly recommended to create a secure cluster for production workloads, however, since anyone can anonymously connect to an unsecure cluster and perform management operations.
+Certificates are used in Service Fabric to provide authentication and encryption to secure various aspects of a cluster and its applications. For more information on how certificates are used in Service Fabric, see [Service Fabric cluster security scenarios](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-cluster-security). To enable user authentication using Azure Active Directory or to set up certificates for application security, [create a cluster from a Resource Manager template](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-cluster-creation-via-arm).
+
+![image](https://user-images.githubusercontent.com/1712635/30460401-9b1850c2-996b-11e7-8780-e5a5975bab36.png)
+
+Select **OK**.
+
+8. Review the summary. If you'd like to download a Resource Manager template built from the settings you entered, select **Download template and parameters** (This is what you do if you need to add ports in the future, btw). 
+Select **Create** to create the cluster.
+
+You can see the creation progress in the notifications. (Click the "Bell" icon near the status bar at the upper right of your screen.) If you clicked **Pin to Startboard** while creating the cluster, you see **Deploying Service Fabric Cluster** pinned to the **Start** board.
 
 
 
