Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -116,7 +116,7 @@ See image below for reference:
 
 Select **OK**.
 
-At the **Security** form, for this initial walkthrough select **Unsecure**. It is highly recommended to create a secure cluster for production workloads, however, since anyone can anonymously connect to an unsecure cluster and perform management operations.
+7. At the **Security** form, for this initial walkthrough select **Unsecure**. It is highly recommended to create a secure cluster for production workloads, however, since anyone can anonymously connect to an unsecure cluster and perform management operations.
 Certificates are used in Service Fabric to provide authentication and encryption to secure various aspects of a cluster and its applications. For more information on how certificates are used in Service Fabric, see [Service Fabric cluster security scenarios](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-cluster-security). To enable user authentication using Azure Active Directory or to set up certificates for application security, [create a cluster from a Resource Manager template](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-cluster-creation-via-arm).
 
 ![image](https://user-images.githubusercontent.com/1712635/30460401-9b1850c2-996b-11e7-8780-e5a5975bab36.png)
