Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -128,6 +128,25 @@ Select **Create** to create the cluster.
 
 You can see the creation progress in the notifications. (Click the "Bell" icon near the status bar at the upper right of your screen.) If you clicked **Pin to Startboard** while creating the cluster, you see **Deploying Service Fabric Cluster** pinned to the **Start** board.
 
+### View cluster status in Azure portal
+
+Once your cluster is created, you can inspect your cluster in the **Overview** blade in the portal. You can now see the details of your cluster in the dashboard, including the VMs used by the cluster, the cluster's public endpoint and a link to Service Fabric Explorer.
+
+### Visualize the cluster using Service Fabric explorer
+
+[Service Fabric Explorer](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-visualizing-your-cluster) is a good tool for visualizing your cluster and managing applications. **Service Fabric Explorer** is a service that runs in the cluster. Access it using a web browser by clicking the **Service Fabric Explorer** link of the **cluster Overview** page in the portal. 
+You can also enter the address directly into the browser: 
+    http://eshopmodernizedcluster.westus.cloudapp.azure.com:19080/Explorer
+
+The cluster dashboard provides an overview of your cluster, including a summary of application and node health. The node view shows the physical layout of the cluster. For a given node, you can inspect which applications have code deployed on that node.
+
+********** TBD image SF EXPLORER *************
+
+### How to delete the cluster
+
+A Service Fabric cluster is made up of other Azure resources in addition to the cluster resource itself. So, to completely delete a Service Fabric cluster you also need to delete all the resources it is made of. The simplest way to delete the cluster and all the resources it consumes is to delete the resource group you created when creating the cluster. 
+
+
 
 
 ## Deploying from VSTS CD pipeline to Service Fabric  
