Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -57,7 +57,7 @@ So, you'd be able to deploy those images by simply using the current dockerfiles
 A [Service Fabric cluster](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-deploy-anywhere) is a network-connected set of virtual or physical machines into which your containers or processes are deployed and managed.
 
 You can create a Service Fabric cluster through several ways:
-1. [Create the SF cluster by using the Azure portal](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-get-started-azure-cluster)
+1. [Create the SF cluster by using the Azure portal](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-cluster-creation-via-portal)
 2. [Create a secure SF cluster on Azure using PowerShell](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-tutorial-create-cluster-azure-ps)
 3. [Create a secure SF cluster by using Azure Resource Manager](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-cluster-creation-via-arm)
 
@@ -145,6 +145,11 @@ The cluster dashboard provides an overview of your cluster, including a summary 
 ### How to delete the cluster
 
 A Service Fabric cluster is made up of other Azure resources in addition to the cluster resource itself. So, to completely delete a Service Fabric cluster you also need to delete all the resources it is made of. The simplest way to delete the cluster and all the resources it consumes is to delete the resource group you created when creating the cluster. 
+
+
+
+## Deploying the eShopModernizedMVC app Windows Containers into the SF cluster
+
 
 
 
