Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -132,6 +132,9 @@ You can see the creation progress in the notifications. (Click the "Bell" icon n
 
 Once your cluster is created, you can inspect your cluster in the **Overview** blade in the portal. You can now see the details of your cluster in the dashboard, including the VMs used by the cluster, the cluster's public endpoint and a link to Service Fabric Explorer.
 
+Nodes/VMs used by the cluster, as shown in Azure portal:
+![image](https://user-images.githubusercontent.com/1712635/30460923-00a9c9cc-996f-11e7-8155-ae1511ca8b35.png)
+
 ### Visualize the cluster using Service Fabric explorer
 
 [Service Fabric Explorer](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-visualizing-your-cluster) is a good tool for visualizing your cluster and managing applications. **Service Fabric Explorer** is a service that runs in the cluster. Access it using a web browser by clicking the **Service Fabric Explorer** link of the **cluster Overview** page in the portal. 
@@ -140,7 +143,7 @@ You can also enter the address directly into the browser:
 
 The cluster dashboard provides an overview of your cluster, including a summary of application and node health. The node view shows the physical layout of the cluster. For a given node, you can inspect which applications have code deployed on that node.
 
-********** TBD image SF EXPLORER *************
+![image](https://user-images.githubusercontent.com/1712635/30460995-74b1ee80-996f-11e7-833a-d96e42edd136.png)
 
 ### How to delete the cluster
 
