Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -1,6 +1,9 @@
 ##  Overview
 Applications based on Windows Containers will soon need to use platforms going further from IaaS VMs in order to easily achieve a better automated scalability, high scalability and significant improvement in automated deployments and versioning. You can achieve those goals with the orchestrator Azure Service Fabric, available in Microsoft Azure cloud but also on-premises or even in any other public cloud you’d like to deploy it.
 
+Running an existing application in a Windows container on a Service Fabric cluster doesn't require any changes to your application.
+This walkthrough assumes a basic understanding of Docker. You can learn about Docker by reading the [Docker Overview](https://docs.docker.com/engine/understanding-docker/).
+
 ##  Goals for this walkthrough
 This post describes how to deploy eShopModernizedMVC to Kubernetes but deploying the eShopModernizedWebForms should be pretty similar, so you can use almost the same procedure but using different deployment .yml files.
 
@@ -27,30 +30,13 @@ TBD
 - Have ready a Visual Studio Team Services account (Optional, if deploying from VSTS CD pipeline)
 - Visual Studio 2017 on dev machine (Recommended and needed for this specific walkthorugh)
 - Access to eShopModernizedMVC image at [Docker Hub](https://hub.docker.com/) (or any other Docker Registry like Azure Container Registry)
-- Install Docker CE for Windows so that you can run containers on Windows 10 (dev machine).
+- Install [Docker CE for Windows](https://store.docker.com/editions/community/docker-ce-desktop-windows?tab=description) so that you can run containers on Windows 10 (dev machine).
 - Install Azure PowerShell
 - [Service Fabric Tools](https://blogs.msdn.microsoft.com/azureservicefabric/2017/03/17/visual-studio-2017-and-service-fabric-tools/) are part of the “Azure Development and Management” [workload](https://www.visualstudio.com/vs/visual-studio-workloads/) in Visual Studio 2017. Enable this workload as part of your Visual Studio installation.
 - Install Microsoft [Azure Service Fabric SDK](http://www.microsoft.com/web/handlers/webpi.ashx?command=getinstallerredirect&appid=MicrosoftAzure-ServiceFabric-CoreSDK) or higher through the Platform Installer
 - Install the [Continuous Delivery Tools extension](https://aka.ms/cd4vs) for Visual Studio 2017 (Optional. Needed for deployment from CD pipeline from VSTS)
 
 It is important that you must, in the first place, have tested either the eShopModernizedMVC or eShopModernizedWebForms container in a local Docker for Windows environment so it is now ready to be built and packaged in a Service Fabric application.
-
-## Have the eShopModernizedMVC or eShopModernizedWebForms Docker image ready at any Docker Registry
-
-Once you have the container image built on your machine, you can push it to any container registry (like Docker Hub or Azure Container Registry) so Service Fabric will be able to pull it down and deploy it as a Windows Container.
-If you want to publish your own images, follow a similar procedure than this one used in the "Deployment to VMs" post: [Publish the image in a Docker Registry](https://github.com/dotnet-architecture/eShopModernizing/wiki/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD)#publish-the-image-in-a-docker-registry-docker-hub-of-azure-container-registry).
-
-However, and for simplicity's sake, you can also use the, already published, public eShopModernized Docker images available at Docker Hub and published by our team. Those images are available here:
-
-**eShopModernizedMVC Windows Docker Image:** [https://hub.docker.com/r/eshop/modernizedmvc/](https://hub.docker.com/r/eshop/modernizedmvc/) 
-
-**eShopModernizedWebForms Windows Docker Image:** [https://hub.docker.com/r/eshop/modernizedmvc/](https://hub.docker.com/r/eshop/modernizedmvc/) 
-
-So, you'd be able to deploy those images by simply using the current dockerfiles in the solution which are referencing to these image names:
-
-    `eshop/modernizedmvc`
-
-    `eshop/modernizewebforms`
 
 ## Creating the Service Fabric cluster in Azure
 
@@ -150,10 +136,40 @@ The cluster dashboard provides an overview of your cluster, including a summary 
 A Service Fabric cluster is made up of other Azure resources in addition to the cluster resource itself. So, to completely delete a Service Fabric cluster you also need to delete all the resources it is made of. The simplest way to delete the cluster and all the resources it consumes is to delete the resource group you created when creating the cluster. 
 
 
+## Have the eShopModernizedMVC or eShopModernizedWebForms Docker image ready at any Docker Registry
+
+Once you have the container image built on your machine, you can push it to any container registry (like Docker Hub or Azure Container Registry) so Service Fabric will be able to pull it down and deploy it as a Windows Container.
+If you want to publish your own images, follow a similar procedure than this one used in the "Deployment to VMs" post: [Publish the image in a Docker Registry](https://github.com/dotnet-architecture/eShopModernizing/wiki/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD)#publish-the-image-in-a-docker-registry-docker-hub-of-azure-container-registry).
+
+However, and for simplicity's sake, you can also use the, already published, public eShopModernized Docker images available at Docker Hub and published by our team. Those images are available here:
+
+**eShopModernizedMVC Windows Docker Image:** [https://hub.docker.com/r/eshop/modernizedmvc/](https://hub.docker.com/r/eshop/modernizedmvc/) 
+
+**eShopModernizedWebForms Windows Docker Image:** [https://hub.docker.com/r/eshop/modernizedmvc/](https://hub.docker.com/r/eshop/modernizedmvc/) 
+
+So, you'd be able to deploy those images by simply using the current dockerfiles in the solution which are referencing to these image names:
+
+    eshop/modernizedmvc
+    eshop/modernizewebforms
+
 
 ## Deploying the eShopModernizedMVC app Windows Containers into the SF cluster
 
+### Create the containerized SF service in Visual Studio
 
+Either use the already pre-created SF project available at eShopModernizedMVC or create your own by following the next steps:
+
+The Service Fabric SDK and tools provide a service template to help you create a containerized application.
+1. Start Visual Studio. Select **File > New > Project**.
+2. Select **Service Fabric application**, name it "**eShopModernizedMVC-ServiceFabricApp**", and click **OK**.
+3. Select **Container** from the list of **service templates**.
+4. In **Image Name** enter "eshop/modernizedmvc" (our public image at Docker Hub) or use the image you pushed to your container registry.
+5. Give your service a name, like "**MVC_Container**", and click OK.
+
+See image below as reference.
+![image](https://user-images.githubusercontent.com/1712635/30461319-6611b5a6-9972-11e7-81d0-9d99e523257d.png)
+
+ 
 
 
 
