Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -147,7 +147,7 @@ However, and for simplicity's sake, you can also use the, already published, pub
 
 **eShopModernizedWebForms Windows Docker Image:** [https://hub.docker.com/r/eshop/modernizedmvc/](https://hub.docker.com/r/eshop/modernizedmvc/) 
 
-So, you'd be able to deploy those images by simply using the current dockerfiles in the solution which are referencing to these image names:
+So, you'd be able to deploy those images by simply using the current dockerfiles in the solution which are referencing to these Docker **image names**:
 
     eshop/modernizedmvc
     eshop/modernizewebforms
@@ -169,9 +169,14 @@ The Service Fabric SDK and tools provide a service template to help you create a
 See image below as reference.
 ![image](https://user-images.githubusercontent.com/1712635/30461319-6611b5a6-9972-11e7-81d0-9d99e523257d.png)
 
- 
+### Configure communication
+The containerized service needs an endpoint for communication. Add an `Endpoint` element with the protocol, port, and type to the **ServiceManifest.xml** file. In this case, the containerized service listens on port 5114. In this example, a fixed port 5114 is used. If no port is specified, a random port from the application port range is chosen.
 
-
+    <Resources>
+      <Endpoints>
+        <Endpoint Name="MVC_ContainerTypeEndpoint" UriScheme="http" Port="5114" Protocol="http"/>
+      </Endpoints>
+    </Resources>
 
 ## Deploying from VSTS CD pipeline to Service Fabric  
 - TBD (Plain)
