Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -169,7 +169,7 @@ The Service Fabric SDK and tools provide a service template to help you create a
 See image below as reference.
 ![image](https://user-images.githubusercontent.com/1712635/30461319-6611b5a6-9972-11e7-81d0-9d99e523257d.png)
 
-### Configure communication
+### Configure communication (external service's endpoint published at the cluster)
 The containerized service needs an endpoint for communication. Add an `Endpoint` element with the protocol, port, and type to the **ServiceManifest.xml** file. In this case, the containerized service listens on port 5114. In this example, a fixed port 5114 is used. If no port is specified, a random port from the application port range is chosen.
 
     <Resources>
@@ -177,6 +177,32 @@ The containerized service needs an endpoint for communication. Add an `Endpoint`
         <Endpoint Name="MVC_ContainerTypeEndpoint" UriScheme="http" Port="5114" Protocol="http"/>
       </Endpoints>
     </Resources>
+
+By defining an endpoint, Service Fabric publishes the endpoint to the Naming service. Other services running in the cluster can resolve this container. 
+You can also perform container-to-container communication using the reverse proxy. Communication is performed by providing the [reverse proxy](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-reverseproxy) HTTP listening port and the name of the services that you want to communicate with as environment variables.
+
+### Configure and set environment variables
+
+Environment variables can be specified for each code package in the service manifest. This feature is available for all services in Service Fabric irrespective of whether they are deployed as containers or processes or guest executables. You can override environment variable values in the application manifest or specify them during deployment as application parameters.
+
+The following **service manifest** XML snippet shows the **environment variables** needed by the **eShopModernizedMVC** application, like the EF Connection String, use yes/not of mock-data, etc.:
+
+
+    <CodePackage Name="Code" Version="1.0.0">
+      ...    
+      <EnvironmentVariables>
+        <!-- <EnvironmentVariable Name="VariableName" Value="VariableValue"/> -->
+        <EnvironmentVariable Name="ConnectionString" Value="Data Source=SqlData_Container.eShopModernizedMVC_ServiceFabricApp,5433;Database=Microsoft.eShopOnContainers.Services.CatalogDb;User Id=sa;Password=Pass@word"/>
+        <EnvironmentVariable Name="PicBaseUrl" Value="http://eshopmodernizedcluster.westus.cloudapp.azure.com:5114/items/[0]/pic/"/>
+        <EnvironmentVariable Name="UseMockData" Value="True"/>
+        <EnvironmentVariable Name="UseCustomizationData" Value="False"/>
+      </EnvironmentVariables>
+    </CodePackage>
+
+These environment variables can be overridden in the application manifest, too.
+
+
+
 
 ## Deploying from VSTS CD pipeline to Service Fabric  
 - TBD (Plain)
