Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -155,6 +155,8 @@ So, you'd be able to deploy those images by simply using the current dockerfiles
 
 ## Deploying the eShopModernizedMVC app Windows Containers into the SF cluster
 
+If you don't want to create the Service Fabric "service-deployment project" and configure its XML metadata (so you understand it), you can also skip this part in Visual Studio and code files and directly deploy the read-to-deploy eShopModernized SF project available here **(TBD)** and jump to the section **"TBD"**. 
+
 ### Create the containerized SF service in Visual Studio
 
 Either use the already pre-created SF project available at eShopModernizedMVC or create your own by following the next steps:
