Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -203,8 +203,21 @@ The following **service manifest** XML snippet shows the **environment variables
 
 These environment variables can be overridden in the application manifest, too.
 
+### Configure container port-to-host port mapping and container-to-container discovery
 
+Configure a host port used to communicate with the container. The port binding maps the port on which the service is listening inside the container to a port on the host. Add a `PortBinding` element in `ContainerHostPolicies` element of the **ApplicationManifest.xml** file. 
+In the eShopModernizedMVC container, the `ContainerPort` is 80 (the container exposes port 80, internally within the Docker Host, as specified in its original Dockerfile) and `EndpointRef` is "**MVC_ContainerTypeEndpoint**" (the endpoint previously defined in the service manifest). 
+Incoming requests to the service on port 5114 at the cluster and nodes are mapped to port 80 on the eShopModernizedMVC container.
 
+    <ServiceManifestImport>
+      <ServiceManifestRef ServiceManifestName="MVC_ContainerPkg" ServiceManifestVersion="1.0.0" />
+      <ConfigOverrides />
+      <Policies>
+        <ContainerHostPolicies CodePackageRef="Code">
+          <PortBinding ContainerPort="80" EndpointRef="MVC_ContainerTypeEndpoint"/>
+        </ContainerHostPolicies>
+      </Policies>
+    </ServiceManifestImport>
 
 ## Deploying from VSTS CD pipeline to Service Fabric  
 - TBD (Plain)
