Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -219,6 +219,28 @@ Incoming requests to the service on port 5114 at the cluster and nodes are mappe
       </Policies>
     </ServiceManifestImport>
 
+
+### (OPTIONAL) Configure authentication if using a private container registry (like Azure Container Registry)
+If using public images at Docker Hub, you don't need this step.
+However, you could configure container registry authentication by adding `RepositoryCredentials` to `ContainerHostPolicies` of the ApplicationManifest.xml file. Add the account and password for the **myregistry.azurecr.io** container registry, which allows the service to download the container image from the private repository in Azure Container Registry (ACR).
+
+
+### Deploy the containerized application from Visual Studio
+
+To publish your SF application (which was defined simply by the xml manifest files pointing to container images available at a Docker Registry), just right-click on the Service Fabric project (i.e. **eShopModernizedMVC_ServiceFabricApp**) in  **Solution Explorer** in Visual Studio and select **Publish**.
+
+In **Connection Endpoint**, select/enter the management endpoint for the cluster. For example, `eshopmodernizedcluster.westus.cloudapp.azure.com:19000`. You can find the client connection endpoint in the Overview blade for your cluster in the Azure portal.
+
+Click **Publish**.
+
+While publishing, you can see how the application is being deployed by using Service Fabric Explorer. As mentioned before, [Service Fabric Explorer](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-visualizing-your-cluster) is a web-based tool for inspecting and managing applications and nodes in a Service Fabric cluster. Open a browser and navigate to [http://eshopmodernizedcluster.westus.cloudapp.azure.com:19080/Explorer/](http://eshopmodernizedcluster.westus.cloudapp.azure.com:19080/Explorer/) and follow the application deployment. 
+
+The application deploys but won't be ready until the Docker images are downloaded the first time (pulled from the Docker Registry) onto the cluster nodes. This can take some time, depending on the image size. For instance, if including the SQL Server image in the deployment (as configured in the eShopModernizedMVC SF manifest code in the GitHub repo) it will take significant time (just the first time), because the SQL Server image is quite large. 
+
+
+
+
+
 ## Deploying from VSTS CD pipeline to Service Fabric  
 - TBD (Plain)
 
