Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -237,12 +237,69 @@ While publishing, you can see how the application is being deployed by using Ser
 
 The application deploys but won't be ready until the Docker images are downloaded the first time (pulled from the Docker Registry) onto the cluster nodes. This can take some time, depending on the image size. For instance, if including the SQL Server image in the deployment (as configured in the eShopModernizedMVC SF manifest code in the GitHub repo) it will take significant time (just the first time), because the SQL Server image is quite large. 
 
+Below you can see how Service Fabric Explorer shows the eShopModernizedMVC application deployed, in this case, including a second Windows Container with the SQL Server.
+
+![image](https://user-images.githubusercontent.com/1712635/30462085-1e07fb8e-9978-11e7-9b16-fc272a0f04ae.png)
+
+Finally, open a browser and navigate to `http://eshopmodernizedcluster.westus.cloudapp.azure.com:5114`. 
+You should see the eShopModernizedMVC web app in the browser.
 
 
+************ TBD - MVC app screenshot *************
+
+
+### (OPTIONAL) Adding a SQL Server Windows Container to the applications
+
+If you don't want to use the "mock-data" but to access to a real SQL Server deployed as a container, then you'd need to add a similar SF service to the project by following a similar procedure.
+
+See image below in VS and explore the XML code in the repo to know how easy is to deploy a SQL Server container into Service Fabric.
+
+![image](https://user-images.githubusercontent.com/1712635/30462125-6b6362ec-9978-11e7-91a0-cfbad2c3bc43.png)
+
+**IMPORTANT**: Note that SQL Server in a container should only be used for dev/test environments.
+**You should move your database to high available systems, like Azure SQL Database, for production environments**.
+
+
+### Clean up
+You continue to incur charges while the cluster is running, consider [deleting your cluster](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-get-started-azure-cluster#remove-the-cluster). 
+
+[Party clusters](http://tryazureservicefabric.westus.cloudapp.azure.com/) from Azure Service Fabric are automatically deleted after a few hours.
 
 
 ## Deploying from VSTS CD pipeline to Service Fabric  
 - TBD (Plain)
+
+
+
+
+
+Additional resources 
+· Prepare your development environment for Service Fabric
+	https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-get-started
+· Create your first Service Fabric cluster on Azure
+	https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-get-started-azure-cluster
+· Deploy a .NET application in a Windows container to Azure Service Fabric from VSTS and docker-compose
+	https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-host-app-in-a-container
+· Create your first Service Fabric container application on Windows (SF metadata, Visual Studio, Python container)
+	https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-get-started-containers
+· Deploy a Service Fabric Windows container application on Azure (SF metadata and Visual Studio)
+	https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-quickstart-containers
+· Docker-Compose application support in Azure Service Fabric (Preview)
+	https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-docker-compose#deploy-a-docker-compose-file-on-service-fabric
+· Deploying a Docker-Composed Application on Service Fabric (CLI)
+	http://blog.sluijsveld.com/20/05/2017/DeployingDockerComposedAppOnServiceFabric/
+· Running Windows Containers on Azure Service Fabric
+	https://loekd.wordpress.com/2017/02/08/running-windows-containers-on-azure-service-fabric/
+· Create a Service Fabric cluster by using Azure Resource Manager
+	https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-cluster-creation-via-arm
+· Create a secure cluster on Azure using PowerShell
+	https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-tutorial-create-cluster-azure-ps 
+· ApplicationInsights SDK for ServiceFabric projects
+	https://github.com/Microsoft/ApplicationInsights-ServiceFabric
+· Service Fabric Container Samples (C# Web frontent and Nodejs backend)
+	https://github.com/Azure-Samples/service-fabric-dotnet-containers
+· Reverse proxy in Azure Service Fabric
+	https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-reverseproxy
 
 
 
