--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -274,32 +274,29 @@ You continue to incur charges while the cluster is running, consider [deleting y
 
 
 Additional resources 
-· Prepare your development environment for Service Fabric
-	https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-get-started
-· Create your first Service Fabric cluster on Azure
-	https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-get-started-azure-cluster
-· Deploy a .NET application in a Windows container to Azure Service Fabric from VSTS and docker-compose
-	https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-host-app-in-a-container
-· Create your first Service Fabric container application on Windows (SF metadata, Visual Studio, Python container)
-	https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-get-started-containers
-· Deploy a Service Fabric Windows container application on Azure (SF metadata and Visual Studio)
-	https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-quickstart-containers
-· Docker-Compose application support in Azure Service Fabric (Preview)
-	https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-docker-compose#deploy-a-docker-compose-file-on-service-fabric
-· Deploying a Docker-Composed Application on Service Fabric (CLI)
-	http://blog.sluijsveld.com/20/05/2017/DeployingDockerComposedAppOnServiceFabric/
-· Running Windows Containers on Azure Service Fabric
-	https://loekd.wordpress.com/2017/02/08/running-windows-containers-on-azure-service-fabric/
-· Create a Service Fabric cluster by using Azure Resource Manager
-	https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-cluster-creation-via-arm
-· Create a secure cluster on Azure using PowerShell
-	https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-tutorial-create-cluster-azure-ps 
-· ApplicationInsights SDK for ServiceFabric projects
-	https://github.com/Microsoft/ApplicationInsights-ServiceFabric
-· Service Fabric Container Samples (C# Web frontent and Nodejs backend)
-	https://github.com/Azure-Samples/service-fabric-dotnet-containers
-· Reverse proxy in Azure Service Fabric
-	https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-reverseproxy
-
-
-
+- Prepare your development environment for Service Fabric
+    [https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-get-started](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-get-started)
+- Create your first Service Fabric cluster on Azure
+    [https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-get-started-azure-cluster](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-get-started-azure-cluster)
+- Deploy a .NET application in a Windows container to Azure Service Fabric from VSTS and docker-compose
+    [https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-host-app-in-a-container](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-host-app-in-a-container)
+- Create your first Service Fabric container application on Windows (SF metadata, Visual Studio, Python container)
+    [https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-get-started-containers](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-get-started-containers)
+- Deploy a Service Fabric Windows container application on Azure (SF metadata and Visual Studio)
+    [https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-quickstart-containers](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-quickstart-containers)
+- Docker-Compose application support in Azure Service Fabric (Preview)
+    [https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-docker-compose#deploy-a-docker-compose-file-on-service-fabric](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-docker-compose#deploy-a-docker-compose-file-on-service-fabric)
+- Deploying a Docker-Composed Application on Service Fabric (CLI)
+    [http://blog.sluijsveld.com/20/05/2017/DeployingDockerComposedAppOnServiceFabric/](http://blog.sluijsveld.com/20/05/2017/DeployingDockerComposedAppOnServiceFabric/)
+- Running Windows Containers on Azure Service Fabric
+    [https://loekd.wordpress.com/2017/02/08/running-windows-containers-on-azure-service-fabric/](https://loekd.wordpress.com/2017/02/08/running-windows-containers-on-azure-service-fabric/)
+- Create a Service Fabric cluster by using Azure Resource Manager
+    [https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-cluster-creation-via-arm](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-cluster-creation-via-arm)
+- Create a secure cluster on Azure using PowerShell
+    [https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-tutorial-create-cluster-azure-ps ](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-tutorial-create-cluster-azure-ps )
+- ApplicationInsights SDK for ServiceFabric projects
+    [https://github.com/Microsoft/ApplicationInsights-ServiceFabric](https://github.com/Microsoft/ApplicationInsights-ServiceFabric)
+- Service Fabric Container Samples (C# Web frontent and Nodejs backend)
+    [https://github.com/Azure-Samples/service-fabric-dotnet-containers](https://github.com/Azure-Samples/service-fabric-dotnet-containers)
+- Reverse proxy in Azure Service Fabric
+    [https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-reverseproxy](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-reverseproxy)
