Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -231,6 +231,10 @@ To publish your SF application (which was defined simply by the xml manifest fil
 
 In **Connection Endpoint**, select/enter the management endpoint for the cluster. For example, `eshopmodernizedcluster.westus.cloudapp.azure.com:19000`. You can find the client connection endpoint in the Overview blade for your cluster in the Azure portal.
 
+****************************************************************************************************************
+************** TBD - VISUAL STUDIO SCREENSHOT of the PUBLISH SERVICE APPLICATION dialog ************************
+****************************************************************************************************************
+
 Click **Publish**.
 
 While publishing, you can see how the application is being deployed by using Service Fabric Explorer. As mentioned before, [Service Fabric Explorer](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-visualizing-your-cluster) is a web-based tool for inspecting and managing applications and nodes in a Service Fabric cluster. Open a browser and navigate to [http://eshopmodernizedcluster.westus.cloudapp.azure.com:19080/Explorer/](http://eshopmodernizedcluster.westus.cloudapp.azure.com:19080/Explorer/) and follow the application deployment. 
@@ -245,7 +249,9 @@ Finally, open a browser and navigate to `http://eshopmodernizedcluster.westus.cl
 You should see the eShopModernizedMVC web app in the browser.
 
 
-************ TBD - MVC app screenshot *************
+****************************************************************************************************************
+************** TBD - MVC app screenshot                                                 ************************
+****************************************************************************************************************
 
 
 ### (OPTIONAL) Adding a SQL Server Windows Container to the applications
