Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -69,11 +69,17 @@ See screenshot below as reference.
 4. Fill out the **Cluster configuration** form. For **Node type count**, enter "1".
 ![image](https://user-images.githubusercontent.com/1712635/30459334-e1b02412-9964-11e7-8bf1-a14b39f66e07.png)
 
-5. Select **Node type 1 (Primary)** and fill out the **Node type configuration** form. Enter a node type name (like "noded1v2" which is based on the type of the VM to be selected)  and set the [Durability tier](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-cluster-capacity#the-durability-characteristics-of-the-cluster) to "**Bronze**." Select a VM size.
+5. Select **Node type 1 (Primary)** and fill out the **Node type configuration** form. Enter a node type name (like "d1v2type" which is based on the type of the VM to be selected)  and set the [Durability tier](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-cluster-capacity#the-durability-characteristics-of-the-cluster) to "**Bronze**." Select a VM size.
 
 Node types define the VM size, number of VMs, custom endpoints, and other settings for the VMs of that type. Each node type defined is set up as a separate virtual machine scale set, which is used to deploy and managed virtual machines as a set. Each node type can be scaled up or down independently, have different sets of ports open, and can have different capacity metrics. The first, or primary, node type is where Service Fabric system services are hosted and must have five or more VMs.
 
-For any production deployment, [capacity planning](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-cluster-capacity) is an important step. For this quick start, however, you aren't running applications so select a D1_V2 Standard VM size. Select "Silver" for the [reliability tier](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-cluster-capacity#the-reliability-characteristics-of-the-cluster) and an initial virtual machine scale set **capacity of 5** VMs.
+For any production deployment, [capacity planning](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-cluster-capacity) is an important step. 
+
+IMPORTANT: If you are deploying just the MVC app container using mock-data or a remote SQL Server (like Azure SQL Database), you can select a D1_V2 Standard VM size which doesn't have much memory and it is cheap.
+ 
+However, **if you will also want to deploy a SQL Server container** (the other SF app definition) as part of the same cluster, **then you will need a larger VM, with more memory (at least 7GB memory), like the D2_V2 or D3_V2 size**.
+
+Select "Silver" for the [reliability tier](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-cluster-capacity#the-reliability-characteristics-of-the-cluster) and an initial virtual machine scale set **capacity of 5** VMs.
 
 Custom endpoints open up ports in the Azure load balancer so that you can connect with applications running on the cluster. It is IMPORTANT that you enter at least the ports to be used by the eShopModernized applications.
 
